fix height on mobile

--- a/weatherApp/style.css
+++ b/weatherApp/style.css
@@ -7,12 +7,15 @@
 
 body {
     background-color: black;
+      height: 100%;
+     overflow-x: hidden; /* Prevent horizontal scroll */
                                                 
 }
 
 #background-video {
     transition: opacity 1s ease-in-out; /* Add transition for smooth fading effect */ 
     z-index: -1; /* Ensure the video is behind the content */
+    height: 100%;
 }
 
 
